auto publishing updates to notebooks

--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4920c284",
+   "id": "2ec1471e",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15ae9044",
+   "id": "f77994d1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd773ea1",
+   "id": "915660a2",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f60ad73",
+   "id": "44ec39c6",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available."
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "025a0544",
+   "id": "9960125c",
    "metadata": {
     "hide-output": false
    },
@@ -62,12 +62,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59bb15e3",
+   "id": "31e2a7a8",
    "metadata": {},
    "source": [
     "## The Two Goods Market Equilibrium\n",
     "\n",
-    "Let’s have a quick recap of this problem – a more detailed explanation and derivation can be found at [A Two Goods Market Equilibrium](https://python.quantecon.org/newton_method.html#two_goods_market).\n",
+    "Let’s have a quick recap of this problem – a more detailed explanation and derivation can be found at [A Two Goods Market Equilibrium](https://python.quantecon.org/newton_method.html#two-goods-market).\n",
     "\n",
     "Assume we have a market for two complementary goods where demand depends on the price of both components.\n",
     "\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "424a38f6",
+   "id": "7dc013f2",
    "metadata": {},
    "source": [
     "### The Multivariable Market Equilibrium\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4790300",
+   "id": "571e219e",
    "metadata": {
     "hide-output": false
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1465859",
+   "id": "494c0672",
    "metadata": {},
    "source": [
     "## Using Newton’s Method\n",
@@ -172,7 +172,7 @@
     "\n",
     "<a id='equation-multi-newton'></a>\n",
     "$$\n",
-    "p_{n+1} = p_n - J_e(p_n)^{-1} e(p_n) \\tag{2.1}\n",
+    "p_{n+1} = p_n - J_e(p_n)^{-1} e(p_n) \\tag{3.1}\n",
     "$$\n",
     "\n",
     "Here $ J_e(p_n) $ is the Jacobian of $ e $ evaluated at $ p_n $.\n",
@@ -181,13 +181,13 @@
     "\n",
     "Here, instead of coding Jacobian by hand, We use the `jax.jacobian()` function to auto-differentiate and calculate the Jacobian.\n",
     "\n",
-    "With only slight modification, we can generalize [our previous attempt](https://python.quantecon.org/newton_method.html#first_newton_attempt) to multi-dimensional problems"
+    "With only slight modification, we can generalize [our previous attempt](https://python.quantecon.org/newton_method.html#first-newton-attempt) to multi-dimensional problems"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9c34600",
+   "id": "e484a2f2",
    "metadata": {
     "hide-output": false
    },
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "713a5355",
+   "id": "29528134",
    "metadata": {},
    "source": [
     "### A High-Dimensional Problem\n",
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c1276da",
+   "id": "944cead5",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "858ccd08",
+   "id": "54e013e1",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f29646e",
+   "id": "0ec633cb",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b66a7e71",
+   "id": "e32a94a0",
    "metadata": {},
    "source": [
     "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2941042",
+   "id": "0b287d57",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5560561c",
+   "id": "6c67c206",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd7115f0",
+   "id": "0106efa2",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f582d1",
+   "id": "4a71e401",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb1016a1",
+   "id": "c3f55782",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d820730a",
+   "id": "c3d0d801",
    "metadata": {},
    "source": [
     "The result is also less accurate."
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244d222f",
+   "id": "c7aaee9c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -364,10 +364,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b6949d",
+   "id": "b94122fc",
    "metadata": {},
    "source": [
-    "## Exercise 2.1\n",
+    "## Exercise 3.1\n",
     "\n",
     "Consider a three-dimensional extension of the Solow fixed point problem with\n",
     "\n",
@@ -423,10 +423,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c7e18b3",
+   "id": "49270ee6",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 2.1](https://python.quantecon.org/#newton_ex1)\n",
+    "## Solution to[ Exercise 3.1](https://python.quantecon.org/#newton_ex1)\n",
     "\n",
     "Let’s first define the parameters for this problem"
    ]
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f7d431",
+   "id": "0fab2128",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9775897d",
+   "id": "2ca15696",
    "metadata": {},
    "source": [
     "Then define the multivariate version of the formula for the [law of motion of captial](https://python.quantecon.org/newton_method.html#solow)"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a96e1d",
+   "id": "a482ee16",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab9b971b",
+   "id": "13a121da",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "938ea087",
+   "id": "3cd2234a",
    "metadata": {
     "hide-output": false
    },
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0a9415b",
+   "id": "d0738dd9",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e94df9f",
+   "id": "dfba0a37",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cfd938e",
+   "id": "5a604cdc",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81f1e467",
+   "id": "aeebdf4b",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586b0655",
+   "id": "d4b002cd",
    "metadata": {},
    "source": [
     "The result is very close to the ground truth but still slightly different.\n",
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3294cd06",
+   "id": "4bfb82fe",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de9d6fc",
+   "id": "d558549f",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -590,10 +590,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15cc8ab7",
+   "id": "eb9dcb5b",
    "metadata": {},
    "source": [
-    "## Exercise 2.2\n",
+    "## Exercise 3.2\n",
     "\n",
     "In this exercise, let’s try different initial values and check how Newton’s method responds to different starting points.\n",
     "\n",
@@ -636,10 +636,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3506226",
+   "id": "b6a6d510",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 2.2](https://python.quantecon.org/#newton_ex2)\n",
+    "## Solution to[ Exercise 3.2](https://python.quantecon.org/#newton_ex2)\n",
     "\n",
     "Define parameters and initial values"
    ]
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84f4038e",
+   "id": "ee0c7002",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d0e042",
+   "id": "4b26c928",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8440103d",
+   "id": "335fbc3c",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9287fe8b",
+   "id": "548c00d7",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ae6d98",
+   "id": "b9282516",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa36e4c5",
+   "id": "b4b9d03c",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -726,7 +726,7 @@
   }
  ],
  "metadata": {
-  "date": 1683521946.8769732,
+  "date": 1683530831.5200624,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
