--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0647bc97",
+   "id": "a366a6bb",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d105898",
+   "id": "baf17bb3",
    "metadata": {
     "hide-output": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f887b8a",
+   "id": "217b73e0",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edf8cf40",
+   "id": "42fa06ab",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55031c40",
+   "id": "3c7bca7d",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab81d275",
+   "id": "e001b691",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "532c487a",
+   "id": "e8f30e69",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b593246",
+   "id": "aecd280f",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8838d789",
+   "id": "e1604eb1",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028714d8",
+   "id": "b9f102e8",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7dc2cfe",
+   "id": "bdcf98a1",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01e905eb",
+   "id": "9e5f6c47",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15ea8ef",
+   "id": "6b9ec126",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "976a1936",
+   "id": "3110c401",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a210f38",
+   "id": "f309ae09",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7005219f",
+   "id": "36635383",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ba7af5",
+   "id": "c4969e54",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbd9037c",
+   "id": "ea4f62a0",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53006cbd",
+   "id": "f8807d17",
    "metadata": {
     "hide-output": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3767c6ef",
+   "id": "2772616a",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee1d32c",
+   "id": "430f1d97",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e5dda67",
+   "id": "69854648",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c93bf47",
+   "id": "ea15f63d",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "837233c6",
+   "id": "4e698a37",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -342,7 +342,7 @@
     "\n",
     "<a id='equation-wealth-dynam-ah'></a>\n",
     "$$\n",
-    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{5.1}\n",
+    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{6.1}\n",
     "$$\n",
     "\n",
     "where\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2f86c4",
+   "id": "05c470e5",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "453bb250",
+   "id": "af10fa88",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc9250f9",
+   "id": "22181ada",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63b79964",
+   "id": "834c9ec2",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "875533e2",
+   "id": "9b00a96d",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d4a882",
+   "id": "88f55b21",
    "metadata": {
     "hide-output": false
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d6b25d",
+   "id": "e6bdad2c",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7b05f0a",
+   "id": "0d410286",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06ee2883",
+   "id": "b15ad4ea",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71168f2f",
+   "id": "72925b80",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569e24aa",
+   "id": "b15a8cce",
    "metadata": {
     "hide-output": false
    },
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a6932d",
+   "id": "1c86892c",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4582e38",
+   "id": "fac5f15d",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d27077e",
+   "id": "c4209417",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a34a307",
+   "id": "4e865c3c",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5efda477",
+   "id": "b2a458a8",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "067ef74d",
+   "id": "a601c644",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8dd5fc",
+   "id": "3abd6e5e",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175030bf",
+   "id": "3a85833c",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2d4fb3d",
+   "id": "fe4b6a61",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c6c70c",
+   "id": "5fbfb083",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1e3ae22",
+   "id": "93c7fbf2",
    "metadata": {
     "hide-output": false
    },
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4309f066",
+   "id": "2ca383ec",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7464705",
+   "id": "c57d7481",
    "metadata": {
     "hide-output": false
    },
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d533f7",
+   "id": "96fe56ad",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c16557d",
+   "id": "9ee6a077",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c127d090",
+   "id": "79604021",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c00f29",
+   "id": "da19936d",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e144962",
+   "id": "b8972a11",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe7ed6e",
+   "id": "5afe20f3",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c112e942",
+   "id": "24100b0b",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028184dd",
+   "id": "6a41343b",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2180b3",
+   "id": "a52570e1",
    "metadata": {
     "hide-output": false
    },
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84694264",
+   "id": "d773228f",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "886aa614",
+   "id": "128287a7",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -930,10 +930,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a7d7aa",
+   "id": "e3d65079",
    "metadata": {},
    "source": [
-    "## Exercise 5.1\n",
+    "## Exercise 6.1\n",
     "\n",
     "For a wealth or income distribution with Pareto tail, a higher tail index suggests lower inequality.\n",
     "\n",
@@ -955,10 +955,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f62f47",
+   "id": "fbd5da23",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 5.1](https://python.quantecon.org/#wd_ex1)\n",
+    "## Solution to[ Exercise 6.1](https://python.quantecon.org/#wd_ex1)\n",
     "\n",
     "Here is one solution, which produces a good match between theory and\n",
     "simulation."
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d68570bb",
+   "id": "e2b3418d",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad7ca14",
+   "id": "c3e3d3d2",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -1004,17 +1004,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa8d19d",
+   "id": "5d9c06da",
    "metadata": {},
    "source": [
-    "## Exercise 5.2\n",
+    "## Exercise 6.2\n",
     "\n",
     "When savings is constant, the wealth process has the same quasi-linear\n",
     "structure as a Kesten process, with multiplicative and additive shocks.\n",
     "\n",
     "The Kesten–Goldie theorem tells us that Kesten processes have Pareto tails under a range of parameterizations.\n",
     "\n",
-    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(5.1)](#equation-wealth-dynam-ah) are not IID.\n",
+    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(6.1)](#equation-wealth-dynam-ah) are not IID.\n",
     "\n",
     "At the same time, given the similarities, perhaps Pareto tails will arise.\n",
     "\n",
@@ -1029,10 +1029,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03620f80",
+   "id": "0f857a44",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 5.2](https://python.quantecon.org/#wd_ex2)\n",
+    "## Solution to[ Exercise 6.2](https://python.quantecon.org/#wd_ex2)\n",
     "\n",
     "First let’s generate the distribution:"
    ]
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7954ad82",
+   "id": "b92f4dfe",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d41d9c8",
+   "id": "a6491170",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8048ecd4",
+   "id": "199d36e0",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e60b56a",
+   "id": "d5222a3c",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b47550",
+   "id": "f6c9c05b",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   }
  ],
  "metadata": {
-  "date": 1683521947.030934,
+  "date": 1683530831.6828308,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
