--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b716b59c",
+   "id": "e2396c70",
    "metadata": {},
    "source": [
     "# About these Lectures"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a21a1bfb",
+   "id": "87f854e7",
    "metadata": {},
    "source": [
     "## About\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb6ae34",
+   "id": "0526881a",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -38,12 +38,12 @@
     "- [Matthew McKay](https://github.com/mmcky)  \n",
     "- [Humphrey Yang](https://github.com/HumphreyYang)  \n",
     "- [Hengcheng Zhang](https://github.com/HengchengZhang)  \n",
-    "- [Frank Wu](https://github.com/https://github.com/chappiewuzefan)  "
+    "- [Frank Wu](https://github.com/chappiewuzefan)  "
    ]
   }
  ],
  "metadata": {
-  "date": 1683521946.72341,
+  "date": 1683530831.0849867,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
