--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "82e21469",
+   "id": "7e6772e3",
    "metadata": {},
    "source": [
     "# Quantitative Economics with Python (JAX)\n",
@@ -16,18 +16,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41118e74",
+   "id": "eaedd8c4",
    "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
     "- [About these Lectures](https://python.quantecon.org/about.html)\n",
+    "- [JAX](https://python.quantecon.org/jax_intro.html)\n",
     "- [Newton’s Method via JAX](https://python.quantecon.org/newtons_method.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74ae3d7f",
+   "id": "6b6bbbad",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e02aab7",
+   "id": "7fdd7ddb",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -47,12 +48,13 @@
     "- [Shortest Paths](https://python.quantecon.org/short_path.html)\n",
     "- [Optimal Investment](https://python.quantecon.org/opt_invest.html)\n",
     "- [Optimal Savings](https://python.quantecon.org/opt_savings.html)\n",
+    "- [Default Risk and Income Fluctuations](https://python.quantecon.org/arellano.html)\n",
     "- [The Aiyagari Model](https://python.quantecon.org/aiyagari_jax.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "298ebe69",
+   "id": "29cb9791",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -64,7 +66,7 @@
   }
  ],
  "metadata": {
-  "date": 1683521946.7903244,
+  "date": 1683530831.2172887,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
