--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8795870c",
+   "id": "2ae3db03",
    "metadata": {},
    "source": [
     "\n",
@@ -11,15 +11,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da39270c",
+   "id": "bd157b9c",
    "metadata": {},
    "source": [
-    "# References"
+    "# References\n",
+    "\n",
+    "<a id='id255'></a>\n",
+    "\\[Are08\\] Cristina Arellano. Default risk and income fluctuations in emerging economies. *The American Economic Review*, pages 690–712, 2008."
    ]
   }
  ],
  "metadata": {
-  "date": 1683521947.0401146,
+  "date": 1683530831.692492,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
